Nonworking branch